# cps371_ai

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  planning.org  training.csv  welcome.sh  xor.csv  xornn.csv
doc/: phase1_writeup.tex  phase_four_writeup.tex  phase_two_writeup.tex  planning.org
include/: a_star_search.h  breadth_first_search.h  cube_experiments.h  cube_ui.h  genetic_algorithm.h  genetic_algorithm_ui.h  net_cube_solver.h  neural_net.h  neural_net_genome.h  neural_net_ui.h  nng_pool.h  record_search_results.h  rubiks_cube.h  sbp_impl.h  search.h  search_facade.h  searchable.h  searchable.hpp  serialize_cube.h  stochastic_back_propogation.h  ui.h
src/: a_star_search.cpp  breadth_first_search.cpp  cube_experiments.cpp  cube_ui.cpp  genetic_algorithm.cpp  genetic_algorithm_ui.cpp  main.cpp  net_cube_solver.cpp  neural_net.cpp  neural_net_genome.cpp  neural_net_ui.cpp  record_search_results.cpp  rubiks_cube.cpp  sbp_impl.cpp  search_facade.cpp  search_node.cpp  searchable.h  serialize_cube.cpp  stochastic_back_propogation.cpp  ui.cpp
test/: cube_tests.cpp  genetic_algorithm_tests.cpp  neural_net_tests.cpp  tests.cpp  tests.h
